--- a/src/component/search.css
+++ b/src/component/search.css
@@ -1,13 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #f6800a;
   min-height: 100vh;
@@ -18,11 +8,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
 .button{
   margin-top: 30px;
   background-color: #EEC40A;
@@ -38,12 +23,7 @@
 	padding:16px 76px;
 	text-decoration:none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-logo2 {
+  height: 40vmin;
+  
 }
